migrando a hexagonal
