# src/main/java/com/bootcamp/account/domain/enums/AccountType.java
@@ -1,0 +1,10 @@
+package com.bootcamp.account.domain.enums;
+
+public enum AccountType {
+    AHORRO(),
+
+    CUENTA_CORRIENTE(),
+
+    PLAZO_FIJO();
+
+}
